7-external-service-entry.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-driver-monitoring-external
spec:
  type: ExternalName
  externalName: 2oujlno5e4.execute-api.us-east-1.amazonaws.com

---

#  The following example declares a  external APIs accessed by internal applications over HTTPS and HTTP
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: fleetman-driver-monitoring
spec:
  hosts:
    - 2oujlno5e4.execute-api.us-east-1.amazonaws.com
  location: MESH_EXTERNAL
  ports:
    - number: 80
      name: http-port
      protocol: HTTP

    - number: 443
      name: https-port-for-tls-origination
      protocol: HTTPS
  resolution: DNS
---
#  The virtual service with port 80 match will forwarded the traffic to the external address
# on port 443 as it only accept https calls
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fleetman-driver-monitoring
spec:
  hosts:
    - 2oujlno5e4.execute-api.us-east-1.amazonaws.com
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: 2oujlno5e4.execute-api.us-east-1.amazonaws.com
            port:
              number: 443
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fleetman-driver-monitoring
spec:
  host: 2oujlno5e4.execute-api.us-east-1.amazonaws.com
  trafficPolicy:
    portLevelSettings: # Traffic policy to specific port
      - port:
          number: 443
        tls:
          mode: SIMPLE
